Refactor license controller